# alpha-zero-gomoku

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  config.ini  config.py  main.py  requirements.txt  self_play.py
alpha_zero/: alpha_zero.py  arena.py  mcts.py  neural_network.py
gomoku/: board.py  board_gui.py  gomoku.py
models/: best_checkpoint
src/: arena.py  gomoku.cpp  gomoku.h  gomoku_gui.py  gui.py  learner.py  library.i  libtorch.cpp  libtorch.h  main.py  mcts.cpp  mcts.h  neural_network.py  py_util.cpp  py_util.h  setup.py  swig.i  swig.py  thread_pool.h
test/: arena_test.py  gomoku_gui_test.py  gomoku_test.cpp  gui_test.py  leaner_test.py  library_test.py  libtorch_test.cpp  mcts_test.cpp  neural_network_test.py  swig_test.py  thread_pool_test.cpp
